--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
       <div class="card">
         <div class="row">
           <input id="name" placeholder="اسمك" style="width:180px" />
-          <button id="setName">تعيين الاسم</button>
+          <button id="setName"> الاسم</button>
 
           <span id="status"><small>الحالة: ...</small></span>
         </div>
@@ -57,7 +57,9 @@
         log.scrollTop = log.scrollHeight;
       }
 
-      const ws = new WebSocket(`ws://${location.host}`);
+      
+const protocol = location.protocol === 'https:' ? 'wss:' : 'ws:';
+const ws = new WebSocket(`${protocol}//${location.host}`);
 
       ws.addEventListener("open", () => {
         statusEl.innerHTML = "<small>الحالة: متصل ✅</small>";
